--- a/src/data/h1/tags/damage_effect.yml
+++ b/src/data/h1/tags/damage_effect.yml
@@ -286,7 +286,7 @@ comments:
     - name: damage aoe core radius
       md: >
         Objects within this radius will be damaged regardless of obstructions
-        like the [BSP][scenario_structure_bsp]. Outside this radius, there must
+        in the [BSP][scenario_structure_bsp]. Outside this radius, there must
         be a line of sight between the effect and target. Contrary to the Guerilla
         tooltip, this field does not determine if the damage has an area of effect;
         see _radius_.
@@ -307,7 +307,9 @@ comments:
     - name: damage stun time
       md: ...
     - name: damage instantaneous acceleration
-      md: ...
+      md: >
+        Controls how much moveable objects are accelerated by this effect. This
+        is scaled by the _acceleration scale_ field of [object][].
     - name: dirt
       md: ...
     - name: sand
