Add cache-control headers when uploading to s3

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,4 +14,4 @@ phases:
   post_build:
     commands:
       - bash -c "if [ /"$CODEBUILD_BUILD_SUCCEEDING/" == /"0/" ]; then exit 1; fi"
-      - aws s3 sync --delete ./dist s3://reclaimers-wiki-files/
+      - aws s3 sync --delete --cache-control max-age=3600 --metadata-directive REPLACE ./dist s3://reclaimers-wiki-files
