--- a/src/data/h1/tags/flag.yml
+++ b/src/data/h1/tags/flag.yml
@@ -2,7 +2,7 @@ name: flag
 id: flag
 invaderStructName: Flag
 comments:
-  md: ...
+  md: Properties for a simulated cloth-like material which can be attached to objects.
   fields:
     - name: flags
       md: ...
