--- a/src/data/h1/tags/scenery.yml
+++ b/src/data/h1/tags/scenery.yml
@@ -3,5 +3,7 @@ id: scen
 parentName: object
 invaderStructName: Scenery
 comments:
-  md: ...
+  md: >
+    Fixed decoration objects like boulders, plants, and crates. Placed in the
+    level using [Sapien][].
   fields: []
