--- a/src/data/h1/tags/material_effects.yml
+++ b/src/data/h1/tags/material_effects.yml
@@ -2,15 +2,28 @@ name: material_effects
 id: foot
 invaderStructName: MaterialEffects
 comments:
-  md: ...
+  md: >
+    Spawns effects when moving objects interact with surfaces, like tread marks,
+    splashing footsteps, and scattering rocks.
   fields:
     - name: effects
-      md: ...
+      md: >
+        This block has positional entries for different types of material
+        interactions, such as walking, impacts, and vehicle tire slip.
       fields:
         - name: materials
-          md: ...
+          md: >
+            This block has positional entries for every hard-coded material
+            type. These are the same material types seen in [damage_effect][]
+            modifiers.
           fields:
             - name: effect
-              md: ...
+              md: >
+                The effect to locally spawn at the interaction/collision point,
+                which can do things like create decals, particles, lights, etc.
             - name: sound
-              md: ...
+              md: >
+                A sound to play at the interaction/collision point. It is also
+                possible to add a sound _part_ to the effect above, but using
+                this field may prevent the game from cutting this sound during
+                effect-intense scenes.
