--- a/src/data/h1/tags/sound_scenery.yml
+++ b/src/data/h1/tags/sound_scenery.yml
@@ -3,5 +3,7 @@ id: ssce
 parentName: object
 invaderStructName: SoundScenery
 comments:
-  md: ...
+  md: >
+    Identical to [scenery][] but with collision rules like [device_light_fixture][].
+    Used for invisible emitters of localized sound like rivers and waterfalls.
   fields: []
