Add Jakey's information about shaders and renderer; README update; add heading flash

--- a/src/data/h1/tags/contrail.yml
+++ b/src/data/h1/tags/contrail.yml
@@ -48,7 +48,10 @@ comments:
         - name: texture animation v
           md: ...
     - name: point generation rate
-      md: ...
+      md: >
+        For compatibility with unmodified clients or future mods, try not to
+        exceed 30 points per second, the game's tick rate as it can cause visual
+        artifacts.
     - name: point velocity
       md: ...
     - name: point velocity cone angle
