--- a/src/data/h1/tags/shader_model.yml
+++ b/src/data/h1/tags/shader_model.yml
@@ -9,7 +9,10 @@ comments:
       md: ...
       fields:
         - name: detail after reflection
-          md: ...
+          md: >
+            If enabled, detail maps should be applied _over_ specular reflections.
+            This flag does not work as intended in the [PC renderer][renderer#pc-regressions]
+            but can be worked around with [Chimera][].
         - name: two sided
           md: ...
         - name: not alpha tested
