--- a/src/data/h1/tools.yml
+++ b/src/data/h1/tools.yml
@@ -4,6 +4,14 @@
 # item name, and pages can opt-in to workflow information in their metabox
 # by referencing these names with `workflowName`, `toolName`, or `tagName`.
 workflowItems:
+  # mods:
+  Chimera:
+    page: chimera
+    authors:
+      - Kavawuvi
+      - Vaporeon
+      - JerryBrick
+      - surrealwaffle
   # tools:
   Blender:
     page: blender
