--- a/src/data/h1/tags/shader_transparent_plasma.yml
+++ b/src/data/h1/tags/shader_transparent_plasma.yml
@@ -3,7 +3,7 @@ id: spla
 parentName: shader
 invaderStructName: ShaderTransparentPlasma
 comments:
-  md: ...
+  md: Used for energy shields like those on [bipeds][biped].
   fields:
     - name: intensity source
       md: ...
