--- a/src/data/h1/tags/bitmap.yml
+++ b/src/data/h1/tags/bitmap.yml
@@ -12,7 +12,7 @@ comments:
         - name: 2d textures
           md: ...
         - name: 3d textures
-          md: ...
+          md: Used for [shader_transparent_plasma][] noise maps.
         - name: cube maps
           md: ...
         - name: sprites
