Add stub page for SeT

--- a/src/data/h1/tools.yml
+++ b/src/data/h1/tools.yml
@@ -125,6 +125,10 @@ workflowItems:
   OS_Sapien:
     inherit: OpenSauce
     heading: os-sapien
+  SeT:
+    page: set
+    authors:
+      - Zatarita
   MEK:
     page: mek
     authors:
