Make JM toolkit animations workflow bidirectional

--- a/src/data/h1/tools.yml
+++ b/src/data/h1/tools.yml
@@ -543,8 +543,12 @@ workflows:
       - jms
       - Blender
   - using: Jointed Model Blender Toolset
-    from: Blender
-    to: Animation data
+    from:
+      - Blender
+      - Animation data
+    to:
+      - Animation data
+      - Blender
   - using: CAD animation exporter
     from: 3ds Max
     to: Animation data
