--- a/src/content/thanks/page.yml
+++ b/src/content/thanks/page.yml
@@ -3,8 +3,14 @@ title:
   es: Agradecimientos
 slug:
   es: agradecimientos
+noSearch: true
+thanksIndex: true
 keywords:
   en:
     - credits
+    - authors
   es:
     - créditos
+    - gracias
+    - autoras
+    - autores
