Complete features system, localized metabox

--- a/src/data/workflows.yml
+++ b/src/data/workflows.yml
@@ -33,7 +33,7 @@ workflowItems:
     page: maya
     authors:
       - Autodesk
-      - Alias (formerly)
+      - Alias
   WRL to OBJ converter:
     page: wrl-to-obj-converter
     authors:
