Add some actor_variant field descriptions from issue #73

--- a/src/content/h1/tags/actor_variant/page.yml
+++ b/src/content/h1/tags/actor_variant/page.yml
@@ -2,3 +2,9 @@ title:
   en: actor_variant
 tagName: actor_variant
 stub: true
+keywords:
+  en:
+    - actor
+thanks:
+  Jakey:
+    en: Providing descriptions for all tag fields
